cluster/apps/tools/speedtest-exporter/speedtest-exporter-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-metrics-local-ingressroute
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`speedtest.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: tools-speedtest-exporter
          port: 9798
